--- a/index.html
+++ b/index.html
@@ -4,6 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        #calculator {
+          width: 200px;
+          border: 1px solid #ccc;
+          padding: 10px;
+          text-align: center;
+          margin: 0 auto;
+        }
+        #display {
+          margin-bottom: 10px;
+          font-size: 18px;
+        }
+        button {
+          width: 40px;
+          height: 40px;
+          font-size: 18px;
+          margin: 5px;
+        }
+      </style>
 </head>
 <body>
     <div id="calculator">
